RAD/logs/build_fail-2-20230826-2215-dreamlte-dream2lte.log
Script started on 2023-08-26 22:16:00-03:00 [TERM="xterm-256color" TTY="/dev/pts/2" COLUMNS="106" LINES="60"]
make[1]: Entering directory '/home/ubuntu/RAD-8895/out'
  GEN     ./Makefile
scripts/kconfig/conf  --silentoldconfig Kconfig
Kconfig:15:warning: environment variable ANDROID_MAJOR_VERSION undefined
INFO: CC is clang
  CHK     include/config/kernel.release
  GEN     ./Makefile
  UPD     include/config/kernel.release
  CHK     include/generated/uapi/linux/version.h
  CHK     include/generated/utsrelease.h
  UPD     include/generated/utsrelease.h
  Using .. as source for kernel
  CHK     scripts/mod/devicetable-offsets.h
  CHK     include/generated/timeconst.h
  CHK     include/generated/bounds.h
  CHK     include/generated/asm-offsets.h
  CALL    ../scripts/checksyscalls.sh
make[2]: 'include/generated/vdso-offsets.h' is up to date.
  CHK     include/generated/compile.h
  CC      init/version.o
  CC      kernel/sys.o
  CC      fs/open.o
  LD      init/built-in.o
  CC      fs/read_write.o
[1m../fs/open.c:355:15: [0m[0;1;31merror: [0m[1mISO C90 forbids mixing declarations and code
      [-Werror,-Wdeclaration-after-statement][0m
        struct cred *override_cred;
[0;1;32m                     ^
[0m1 error generated.
make[2]: *** [../scripts/Makefile.build:277: fs/open.o] Error 1
make[2]: *** Waiting for unfinished jobs....
  CC      block/bio.o
  CC      crypto/api.o
make[1]: *** [/home/ubuntu/RAD-8895/Makefile:1040: fs] Error 2
make[1]: *** Waiting for unfinished jobs....
  CC      block/elevator.o
  CC      crypto/cipher.o
  CC      block/blk-core.o
  CC      kernel/trace/trace.o
  CC      block/blk-tag.o
  CC      crypto/compress.o
  CC      crypto/memneq.o
  CC      block/blk-sysfs.o
  CC      crypto/crypto_wq.o
  CC      block/blk-flush.o
  CC      crypto/algapi.o
  LD      kernel/trace/built-in.o
  GZIP    kernel/config_data.gz
  CC      block/blk-settings.o
  CHK     kernel/config_data.h
  LD      kernel/built-in.o
  CC      block/blk-ioc.o
  CC      block/blk-map.o
  CC      block/blk-exec.o
  CC      block/blk-merge.o
  CC      block/blk-softirq.o
  CC      crypto/scatterwalk.o
^Cmake[2]: *** [../scripts/Makefile.build:277: crypto/scatterwalk.o] Interrupt
make[2]: *** [../scripts/Makefile.build:277: block/blk-merge.o] Interrupt
make[2]: *** [../scripts/Makefile.build:277: block/blk-exec.o] Interrupt
make[2]: *** [../scripts/Makefile.build:277: block/blk-softirq.o] Interrupt
make[1]: *** [/home/ubuntu/RAD-8895/Makefile:1040: crypto] Interrupt
make[1]: *** [/home/ubuntu/RAD-8895/Makefile:1040: block] Interrupt
make: *** [Makefile:152: sub-make] Interrupt

Script done on 2023-08-26 22:16:16-03:00 [COMMAND_EXIT_CODE="130"]
